# easy_file_search

./: .gitignore  BUILD.md  CI_CD_GUIDE.md  LICENSE  MULTILANG.md  README.md  RELEASE_CHECKLIST.md  RELEASE_CHECKLIST_V2.md  check_ci_config.py  config.py  excel_gui_search.py  excel_gui_search.spec  excel_gui_search_i18n.py  excel_gui_search_i18n.spec  i18n.py  pyproject.toml  requirements-dev.txt  start.sh  test_imports.py  使用说明.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
locales/: en.json  zh_CN.json
