[project]
name = "excel-keyword-search"
version = "1.0.0"
description = "一个简单易用的Excel文件关键词搜索工具"
authors = [
    {name = "Zhiyi", email = "ixiqiuqiu@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
dependencies = [
    "openpyxl>=3.1.2"
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=5.12.0",
    "flake8>=6.0.0",
    "safety>=2.0.0",
    "bandit>=1.7.0"
]
keywords = ["excel", "search", "keyword", "gui", "tkinter"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business",
    "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/zhiyi/easy_search"
Repository = "https://github.com/zhiyi/easy_search"
"Bug Tracker" = "https://github.com/zhiyi/easy_search/issues"

[project.gui-scripts]
excel-search = "excel_gui_search:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
